Se agrego una tabla al proyecto donde se van guardando los datos dinamicamente

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
             <input type="email" id="email" name="email" placeholder="Correo" required><br><br>
             <button id="guardar">Guardar</button>
           </form><br><br>
+          <table id="myTable" style="margin-top: 20px;">
+            <tr>
+              <th>Nombre</th>
+              <th>Apellido</th>
+              <th>Correo</th>
+              <th>Acciones</th>
+            </tr>
+          </table>
       </div>
     </div>
     <script src="js/js.js"></script>
