Se ha agragado un array para guardar los registros

--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
             <input type="text" id="lname" name="lname" placeholder="Apellido" required><br><br>
             <label for="email"></label>
             <input type="email" id="email" name="email" placeholder="Correo" required><br><br>
-            <button id="guardar">Guardar</button>
+            <input type="submit" id="guardar">
+            <!-- <button id="guardar">Guardar</button> -->
           </form><br><br>
           <table id="myTable" style="margin-top: 20px;">
-            <tr>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Correo</th>
-              <th>Acciones</th>
-            </tr>
+            <thead>
+              <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Correo</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+           
           </table>
       </div>
     </div>
